// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Item with data and image 1`] = `
<DocumentFragment>
  <div
    class="item"
  >
    <div
      class="media"
    >
      <img
        src="/admin/image/2"
      />
    </div>
    <div
      class="content"
    >
      <p
        class="title"
      >
        Title
      </p>
      <p
        class="description"
      >
        Description

      </p>
    </div>
    <p
      class="type"
    >
      Page (sulu_page.edited)
    </p>
  </div>
</DocumentFragment>
`;

exports[`Render Item with data as form 1`] = `
<DocumentFragment>
  <div
    class="editForm"
  >
    <div
      class="form"
    >
      <div
        class="mediaColumn"
      >
        <button
          class="mediaButton"
          type="button"
        >
          <span>
            su-pen
          </span>
        </button>
      </div>
      <div
        class="formColumn"
      >
        <div
          class="titleInput"
        >
          <input
            type="text"
            value="Title"
          />
        </div>
        <div
          class="descriptionTextArea"
        >
          <textarea
            readonly=""
          >
            Description
          </textarea>
        </div>
      </div>
    </div>
    <div
      class="buttons"
    >
      <button
        type="button"
      >
        sulu_admin.cancel
      </button>
      <button
        type="button"
      >
        sulu_admin.reset
      </button>
      <button
        type="button"
      >
        sulu_admin.apply
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Item with data but without image 1`] = `
<DocumentFragment>
  <div
    class="item"
  >
    <div
      class="media"
    />
    <div
      class="content"
    >
      <p
        class="title"
      >
        Title
      </p>
      <p
        class="description"
      >
        Description

      </p>
    </div>
    <p
      class="type"
    >
      Page
    </p>
  </div>
</DocumentFragment>
`;

exports[`Render Item without data 1`] = `
<DocumentFragment>
  <div
    class="item"
  >
    <div
      class="media"
    />
    <div
      class="content"
    >
      <p
        class="title"
      />
      <p
        class="description"
      />
    </div>
    <p
      class="type"
    >
      Page
    </p>
  </div>
</DocumentFragment>
`;
